Implement PostgreSQL non-root user pattern for n8n
- Add postgres-configmap.yaml with init script to create n8n_user
- Add postgres-sealed-secret.yaml with admin and non-root credentials
- Update postgres-statefulset.yaml to use init script and environment variables
- Update deployment.yaml with volume-permissions init container
- Update deployment.yaml to use non-root database credentials
- Fix volumeClaimTemplate accessModes in all overlays (dev/staging/prod)
- Add comprehensive architecture documentation
- Add n8n README with quick reference

Security improvements:
- n8n uses dedicated database user (not postgres superuser)
- Volume permissions set correctly for non-root user
- Follows principle of least privilege

Architecture alignment:
- Adopted non-root pattern from official n8n-hosting
- Enhanced with production-grade security and GitOps

--- a/n8n/base/kustomization.yaml
+++ b/n8n/base/kustomization.yaml
@@ -14,6 +14,8 @@ labels:
 resources:
   - namespace.yaml
   - sealed-secret.yaml
+  - postgres-sealed-secret.yaml
+  - postgres-configmap.yaml
   - postgres-statefulset.yaml
   - postgres-service.yaml
   - deployment.yaml
