--- a/n8n/overlays/prod/patches.yaml
+++ b/n8n/overlays/prod/patches.yaml
@@ -130,6 +130,8 @@ spec:
   - metadata:
       name: postgres-data
     spec:
+      accessModes:
+      - ReadWriteOnce
       resources:
         requests:
           storage: 50Gi
