--- a/n8n/base/deployment.yaml
+++ b/n8n/base/deployment.yaml
@@ -39,8 +39,26 @@ spec:
         seccompProfile:
           type: RuntimeDefault
 
-      # Init container to wait for PostgreSQL
+      # Init containers
       initContainers:
+      # Set correct permissions on the data volume
+      - name: volume-permissions
+        image: busybox:1.36
+        command: ["sh", "-c", "chown -R 1000:1000 /data"]
+        volumeMounts:
+        - name: n8n-data
+          mountPath: /data
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: false  # Need root to chown
+          runAsUser: 0
+          capabilities:
+            drop:
+              - ALL
+            add:
+              - CHOWN
+              - FOWNER
+      # Wait for PostgreSQL to be ready
       - name: wait-for-postgres
         image: busybox:1.36
         command:
@@ -93,7 +111,22 @@ spec:
           value: "postgres"
         - name: DB_POSTGRESDB_PORT
           value: "5432"
-        # Database credentials come from secret via envFrom
+        # Database credentials - using non-root user for security
+        - name: DB_POSTGRESDB_USER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_NON_ROOT_USER
+        - name: DB_POSTGRESDB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_NON_ROOT_PASSWORD
+        - name: DB_POSTGRESDB_DATABASE
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_DB
 
         # Resource limits and requests (overridden by overlays)
         resources:
