--- a/n8n/overlays/staging/patches.yaml
+++ b/n8n/overlays/staging/patches.yaml
@@ -47,6 +47,8 @@ spec:
   - metadata:
       name: postgres-data
     spec:
+      accessModes:
+      - ReadWriteOnce
       resources:
         requests:
           storage: 10Gi
