--- a/n8n/base/postgres-configmap.yaml
+++ b/n8n/base/postgres-configmap.yaml
@@ -21,23 +21,10 @@ data:
       echo "Creating n8n database user: ${POSTGRES_NON_ROOT_USER}"
 
       # Create the n8n user and grant privileges
-      psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
-        -- Create n8n user if it doesn't exist
-        DO \$\$
-        BEGIN
-          IF NOT EXISTS (SELECT FROM pg_catalog.pg_roles WHERE rolname = '${POSTGRES_NON_ROOT_USER}') THEN
-            CREATE USER "${POSTGRES_NON_ROOT_USER}" WITH PASSWORD '${POSTGRES_NON_ROOT_PASSWORD}';
-          END IF;
-        END
-        \$\$;
-
-        -- Grant all privileges on the database to n8n user
+      psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<EOSQL
+        CREATE USER "${POSTGRES_NON_ROOT_USER}" WITH PASSWORD '${POSTGRES_NON_ROOT_PASSWORD}';
         GRANT ALL PRIVILEGES ON DATABASE ${POSTGRES_DB} TO "${POSTGRES_NON_ROOT_USER}";
-
-        -- Grant privileges on schema (PostgreSQL 15+)
         GRANT ALL ON SCHEMA public TO "${POSTGRES_NON_ROOT_USER}";
-
-        -- Set default privileges for future objects
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "${POSTGRES_NON_ROOT_USER}";
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON SEQUENCES TO "${POSTGRES_NON_ROOT_USER}";
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON FUNCTIONS TO "${POSTGRES_NON_ROOT_USER}";
