--- a/n8n/overlays/prod/kustomization.yaml
+++ b/n8n/overlays/prod/kustomization.yaml
@@ -21,6 +21,7 @@ nameSuffix: -prod
 # Patches for production environment
 patches:
 - path: patches.yaml
+- path: single-node-fixes.yaml
 
 # ConfigMap generator for environment-specific config
 configMapGenerator:
