--- a/n8n/base/postgres-configmap.yaml
+++ b/n8n/base/postgres-configmap.yaml
@@ -21,14 +21,14 @@ data:
       echo "Creating n8n database user: ${POSTGRES_NON_ROOT_USER}"
 
       # Create the n8n user and grant privileges
-      psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<EOSQL
+      psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
         CREATE USER "${POSTGRES_NON_ROOT_USER}" WITH PASSWORD '${POSTGRES_NON_ROOT_PASSWORD}';
         GRANT ALL PRIVILEGES ON DATABASE ${POSTGRES_DB} TO "${POSTGRES_NON_ROOT_USER}";
         GRANT ALL ON SCHEMA public TO "${POSTGRES_NON_ROOT_USER}";
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "${POSTGRES_NON_ROOT_USER}";
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON SEQUENCES TO "${POSTGRES_NON_ROOT_USER}";
         ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON FUNCTIONS TO "${POSTGRES_NON_ROOT_USER}";
-EOSQL
+      EOSQL
 
       echo "Successfully created n8n database user: ${POSTGRES_NON_ROOT_USER}"
     else
