--- a/n8n/base/deployment.yaml
+++ b/n8n/base/deployment.yaml
@@ -65,12 +65,30 @@ spec:
         - sh
         - -c
         - |
-          echo "Waiting for PostgreSQL to be ready..."
-          until nc -z postgres 5432; do
-            echo "PostgreSQL is unavailable - sleeping"
-            sleep 2
+          echo "=== PostgreSQL Connection Debug ==="
+          echo "Target host: postgres"
+          echo "Target port: 5432"
+          echo "Timestamp: $(date)"
+
+          for i in $(seq 1 30); do
+            echo "Attempt $i/30: Testing connection to postgres:5432"
+            if nc -z postgres 5432; then
+              echo "✓ PostgreSQL is ready on postgres:5432"
+              break
+            else
+              echo "✗ PostgreSQL not ready, waiting..."
+              sleep 2
+            fi
           done
-          echo "PostgreSQL is up - continuing"
+
+          if ! nc -z postgres 5432; then
+            echo "ERROR: PostgreSQL not accessible after 30 attempts"
+            echo "Available services:"
+            nslookup postgres || echo "DNS lookup failed"
+            exit 1
+          fi
+
+          echo "✓ PostgreSQL connection verified"
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
@@ -111,6 +129,13 @@ spec:
           value: "postgres"
         - name: DB_POSTGRESDB_PORT
           value: "5432"
+        # Enhanced logging for debugging
+        - name: N8N_LOG_LEVEL
+          value: "debug"
+        - name: N8N_LOG_OUTPUT
+          value: "console"
+        - name: DB_LOGGING_MAX_EXECUTION_TIME
+          value: "0"
         # Database credentials - using non-root user for security
         - name: DB_POSTGRESDB_USER
           valueFrom:
