--- a/n8n/overlays/prod/kustomization.yaml
+++ b/n8n/overlays/prod/kustomization.yaml
@@ -51,3 +51,4 @@ configMapGenerator:
   - EXTERNAL_HOOK_FILES=
   - N8N_LOG_LEVEL=warn
   - N8N_LOG_OUTPUT=console
+  - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
