--- a/n8n/base/deployment.yaml
+++ b/n8n/base/deployment.yaml
@@ -44,20 +44,18 @@ spec:
       # Set correct permissions on the data volume
       - name: volume-permissions
         image: busybox:1.36
-        command: ["sh", "-c", "chown -R 1000:1000 /data"]
+        command: ["sh", "-c", "touch /data/.n8n-test && rm /data/.n8n-test || true"]
         volumeMounts:
         - name: n8n-data
           mountPath: /data
         securityContext:
           allowPrivilegeEscalation: false
-          runAsNonRoot: false  # Need root to chown
-          runAsUser: 0
+          runAsNonRoot: true
+          runAsUser: 1000
+          readOnlyRootFilesystem: true
           capabilities:
             drop:
               - ALL
-            add:
-              - CHOWN
-              - FOWNER
       # Wait for PostgreSQL to be ready
       - name: wait-for-postgres
         image: busybox:1.36
