--- a/n8n/overlays/prod/single-node-fixes.yaml
+++ b/n8n/overlays/prod/single-node-fixes.yaml
@@ -28,15 +28,15 @@ spec:
         - -c
         - |
           echo "=== PostgreSQL Connection Debug ==="
-          echo "Target host: postgres (StatefulSet service name)"
+          echo "Target host: postgres-prod.n8n-prod.svc.cluster.local (full DNS name)"
           echo "Target port: 5432"
-          echo "Note: StatefulSet name is 'postgres-prod' but service name remains 'postgres'"
+          echo "Note: Using full DNS name due to DNS resolution issues"
           echo "Timestamp: $(date)"
 
           for i in $(seq 1 30); do
-            echo "Attempt $i/30: Testing connection to postgres:5432"
-            if nc -z postgres 5432; then
-              echo "✓ PostgreSQL is ready on postgres:5432"
+            echo "Attempt $i/30: Testing connection to postgres-prod.n8n-prod.svc.cluster.local:5432"
+            if nc -z postgres-prod.n8n-prod.svc.cluster.local 5432; then
+              echo "✓ PostgreSQL is ready on postgres-prod.n8n-prod.svc.cluster.local:5432"
               break
             else
               echo "✗ PostgreSQL not ready, waiting..."
@@ -44,12 +44,10 @@ spec:
             fi
           done
 
-          if ! nc -z postgres 5432; then
+          if ! nc -z postgres-prod.n8n-prod.svc.cluster.local 5432; then
             echo "ERROR: PostgreSQL not accessible after 30 attempts"
-            echo "Checking if postgres-prod service exists..."
-            nslookup postgres-prod || echo "postgres-prod DNS lookup failed"
-            echo "Checking if postgres service exists..."
-            nslookup postgres || echo "postgres DNS lookup failed"
+            echo "Checking DNS resolution..."
+            nslookup postgres-prod.n8n-prod.svc.cluster.local || echo "Full DNS lookup failed"
             exit 1
           fi
 
@@ -65,10 +63,10 @@ spec:
       
       containers:
       - name: n8n
-        # Fix PostgreSQL hostname in environment - use service name, not StatefulSet name
+        # Fix PostgreSQL hostname in environment - use full DNS name for reliable resolution
         env:
         - name: DB_POSTGRESDB_HOST
-          value: "postgres"
+          value: "postgres-prod.n8n-prod.svc.cluster.local"
         - name: DB_POSTGRESDB_PORT
           value: "5432"
       
