fix: override privileged init container in production overlay
- Explicitly override volume-permissions init container in production overlay
- Ensure PodSecurity compliance by removing privileged capabilities
- Use security-compliant settings for all init containers

--- a/n8n/overlays/prod/single-node-fixes.yaml
+++ b/n8n/overlays/prod/single-node-fixes.yaml
@@ -19,8 +19,25 @@ spec:
 
   template:
     spec:
-      # Fix PostgreSQL hostname in init container
+      # Fix PostgreSQL hostname in init container and override volume permissions
       initContainers:
+      - name: volume-permissions
+        image: busybox:1.36
+        command:
+        - sh
+        - -c
+        - touch /data/.access_test && rm /data/.access_test
+        volumeMounts:
+        - name: n8n-data
+          mountPath: /data
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 1000
+          capabilities:
+            drop:
+              - ALL
       - name: wait-for-postgres
         image: busybox:1.36
         command:
