--- a/argocd-apps/n8n-prod.yaml
+++ b/argocd-apps/n8n-prod.yaml
@@ -17,7 +17,9 @@ spec:
           postgresqlUsername: n8n_user
           postgresqlPassword: n8nProdPass123!
           image:
-            tag: "15"
+            registry: docker.io
+            repository: bitnami/postgresql
+            tag: "15-debian-12"
         service:
           type: LoadBalancer
           port: 80
