setting N8N_SECURE_COOKIE=false

--- a/argocd-apps/n8n-prod-fixed.yaml
+++ b/argocd-apps/n8n-prod-fixed.yaml
@@ -26,7 +26,7 @@ spec:
             db:
               postgresdb:
                 password: n8nProdPass123!
-          env:
+          extraEnv:
             - name: N8N_SECURE_COOKIE
               value: "false"
           service:
